--- a/app/assets/stylesheets/groundworkcss/responsive/_helpers.scss
+++ b/app/assets/stylesheets/groundworkcss/responsive/_helpers.scss
@@ -6,11 +6,11 @@
 .desktop-only { display: block; }
 .hide-on-desktop {}
 // ipad helpers
-.ipad-only { display: none; }
+.ipad-only { display: none !important; }
 .hide-on-ipad {}
 // small tablet helpers
-.small-tablet-only { display: none; }
+.small-tablet-only { display: none !important; }
 .hide-on-small-tablet {}
 // mobile helpers
-.mobile-only { display: none; }
+.mobile-only { display: none !important; }
 .hide-on-mobile {}
