--- a/app/assets/stylesheets/groundworkcss/_settings-rails4.scss
+++ b/app/assets/stylesheets/groundworkcss/_settings-rails4.scss
@@ -11,7 +11,7 @@
 // file paths
 $root_path:           "./";      // path to HTML document root (relative from $css_path)
 $images_path:         asset-path("images/");  // path to images (relative from $root_path)
-$fonts_path:          font-path("");  // path to fonts (relative from $root_path)
+$fonts_path:          "groundworkcss/";  // path to fonts (relative from $root_path)
 $boxsizing_path:      asset-path("groundworkcss/libs/boxsizing.htc");  // path to box sizing polyfill (change to absolute path from HTML document root)
 $PIE_path:            asset-path("groundworkcss/libs/PIE.htc");  // path to IE CSS3 polyfill (change to absolute path from HTML document root)
 
