updated to v1.11.5 of GroundworkCSS

--- a/app/assets/stylesheets/groundworkcss/core/_all-core.scss
+++ b/app/assets/stylesheets/groundworkcss/core/_all-core.scss
@@ -8,4 +8,4 @@
 @import "constants";    // required
 @import "breakpoints";  // required
 @import "defaults";     // required
-@import "mixins";       // required
+@import "mixins-core";       // required
