--- a/app/assets/stylesheets/groundworkcss/responsive/_all-responsive.scss
+++ b/app/assets/stylesheets/groundworkcss/responsive/_all-responsive.scss
@@ -7,7 +7,7 @@
 
 
 // responsive adjustments
-@import "helpers";
+@import "helpers-responsive";
 @import "desktop";
 @import "ipad";
 @import "small-tablet";
