refactored install generator add_assets

--- a/app/assets/stylesheets/groundworkcss/base/_reset.scss
+++ b/app/assets/stylesheets/groundworkcss/base/_reset.scss
@@ -90,4 +90,5 @@ $reset-elements:  "html" "body"
   table {
     @extend %table-elements;
   }
+  script { display: none !important; } // ensure embedded script tags don't mess up inline lists, etc.
 }
