synced source files with Groundwork 2.0.4

--- a/app/assets/stylesheets/groundworkcss/_settings.scss
+++ b/app/assets/stylesheets/groundworkcss/_settings.scss
@@ -314,7 +314,7 @@
 //                             "center";
 // $typography-classes:        true;
 // $typography-helpers:        "align-top" "align-right" "align-bottom" "align-left" "align-center" "justify"
-//                             "truncate";
+//                             "truncate" "unstyled";
 // $border-classes:            true;
 // $border-helpers:            "bordered" "border-right" "border-left" "border-top" "border-bottom";
 // $radius-classes:            true;
