--- a/app/assets/stylesheets/groundworkcss/responsive/_ipad.scss
+++ b/app/assets/stylesheets/groundworkcss/responsive/_ipad.scss
@@ -4,6 +4,9 @@
 // =============================================
 
 $responsive: true !default;
+$navigation-classes: true !default;
+$multi-column-classes:      true !default;
+$multi-column-names:        "one-column" "two-column" "three-column" "four-column" "five-column" !default;
 
 
 @mixin ipad {
