updated to Groundwork 2.0.4

--- a/app/assets/stylesheets/groundworkcss/anim/_all-animations.scss
+++ b/app/assets/stylesheets/groundworkcss/anim/_all-animations.scss
@@ -35,3 +35,4 @@ body { /* Addresses a small issue in webkit: http://bit.ly/NEdoDq */
 @import "tada";
 @import "wiggle";
 @import "wobble";
+@import "slide";
