--- a/app/assets/stylesheets/groundworkcss/groundwork.scss
+++ b/app/assets/stylesheets/groundworkcss/groundwork.scss
@@ -54,6 +54,7 @@
 // @import "anim/tada";
 // @import "anim/wiggle";
 // @import "anim/wobble";
+// @import "anim/slide";
 
 // Responsive Components
 @import "responsive/all-responsive";
