--- a/app/assets/stylesheets/groundworkcss/base/_helpers.scss
+++ b/app/assets/stylesheets/groundworkcss/base/_helpers.scss
@@ -37,6 +37,7 @@ $rotation-classes:    true !default;
 $rotation-helpers:    "rotate-90" "rotate-90-ctr" "rotate-180" "rotate-180-ctr" "rotate-270" "rotate-270-ctr" "rotate-360" "rotate-360-ctr" !default;
 
 $transition-classes:  true !default;
+$gutter:              10px !default;
 
 
 ///////////////////////
